--- a/src/app/stepper/stepper.component.scss
+++ b/src/app/stepper/stepper.component.scss
@@ -68,18 +68,11 @@
     }
   }
   &__content {
-    max-width: 700px;
+    width: 50%;
   }
 }
 
-.wrapper {
-  max-width: 1000px;
-  margin: 2rem auto 0;
-}
-
-*,
-*:before,
-*:after {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
